--- a/api/package.json
+++ b/api/package.json
@@ -10,9 +10,11 @@
   "author": "Oscar Jaimes",
   "license": "ISC",
   "dependencies": {
+    "@exodus/prices": "0.0.2",
     "coinbase": "^2.0.8",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7"
   }
 }
