--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "coinbase-terminal",
+  "name": "coinbase-portfolio-tracker",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "main.js",
   "scripts": {
+    "electron-start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "dev": "electron . & nodemon server.js"
   },
   "author": "Oscar Jaimes",
   "license": "ISC",
@@ -15,7 +16,11 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7"
+  },
+  "devDependencies": {
+    "electron": "^12.0.7"
   }
 }
